# text-classifier

./: .gitignore  README.md  pyproject.toml
data/: test.xlsx  val.xlsx
src/core/: preprocessing.py
src/notebooks/: Data exploration.ipynb  Training.ipynb  test.ipynb
src/utils/: cleaner_regex.py  stopwords.py
