[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "text-classifier"
version = "0.0.1"
requires-python = ">=3.10.4"
dependencies = [
        "pandas==2.1.3",
        "ipykernel==6.27.1",
        "matplotlib==3.8.2",
        "scikit-learn==1.3.2",
        "xlrd==1.2.0",
        "XlsxWriter==1.2.8",
        "openpyxl==3.1.2",
        #"tensorboard==1.14.0",
        #"tensorflow==1.14.0",
        #"tensorflow-estimator==1.14.0",
        #"keras-applications==1.0.8",
        #"keras-preprocessing==1.1.2",
        "seaborn==0.13.0"
]

[project.optional-dependencies]
tests = [
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
]
